@@ -1,29 +1,22 @@
 package ufps.edu.co.maps.specific;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import ufps.edu.co.maps.GlobalMapper;
-import ufps.edu.co.processor.crud.AdministrativoProcessor;
-import ufps.edu.co.processor.crud.EntrevistadorProcessor;
-import ufps.edu.co.processor.crud.PersonaProcessor;
-import ufps.edu.co.records.input.entity.AdministrativoInput.ADMINISTRATIVO_FIND;
 import ufps.edu.co.records.input.entity.EntrevistaInput.ENTREVISTA_CREATE;
 import ufps.edu.co.records.input.entity.EntrevistaInput.ENTREVISTA_DELETE;
 import ufps.edu.co.records.input.entity.EntrevistaInput.ENTREVISTA_FIND;
 import ufps.edu.co.records.input.entity.EntrevistaInput.ENTREVISTA_PATCH;
 import ufps.edu.co.records.input.entity.EntrevistaInput.ENTREVISTA_UPDATE;
-import ufps.edu.co.records.input.entity.EntrevistadorInput.ENTREVISTADOR_FIND;
-import ufps.edu.co.records.input.entity.PersonaInput.PERSONA_FIND;
 import ufps.edu.co.records.output.entity.AdministrativoOutput;
 import ufps.edu.co.records.output.entity.AspiranteOutput;
 import ufps.edu.co.records.output.entity.EntrevistaOutput;
 import ufps.edu.co.records.output.entity.EntrevistadorOutput;
-import ufps.edu.co.records.output.entity.EstadoOutput;
-import ufps.edu.co.records.output.entity.PersonaOutput;
-import ufps.edu.co.records.output.entity.TipoentrevistaOutput;
+import ufps.edu.co.records.output.entity.UbicacionOutput;
 import ufps.edu.co.rest.dto.EntrevistaDTO;
 
 @Component
@@ -31,13 +24,22 @@ public class EntrevistaMap extends
         GlobalMapper<ENTREVISTA_CREATE, ENTREVISTA_UPDATE, ENTREVISTA_DELETE, ENTREVISTA_PATCH, ENTREVISTA_FIND, EntrevistaOutput, EntrevistaDTO> {
 
     @Autowired
-    private PersonaProcessor personaProcessor;
+    private TipoentrevistaMap tipoentrevistaMap;
 
     @Autowired
-    private EntrevistadorProcessor entrevistadorProcessor;
+    private EntrevistadorMap entrevistadorMap;
 
     @Autowired
-    private AdministrativoProcessor administrativoProcessor;
+    private AspiranteMap aspiranteMap;
+
+    @Autowired
+    private EstadoMap estadoMap;
+
+    @Autowired
+    private UbicacionMap ubicacionMap;
+
+    @Autowired
+    private AdministrativoMap administrativoMap;
 
     public EntrevistaMap() {
         super(ENTREVISTA_CREATE.class, ENTREVISTA_UPDATE.class, ENTREVISTA_DELETE.class, ENTREVISTA_PATCH.class,
@@ -53,6 +55,7 @@ public class EntrevistaMap extends
         dto.setIdEntrevistador(input.idEntrevistador());
         dto.setIdAspirante(input.idAspirante());
         dto.setIdEstado(input.idEstado());
+        dto.setIdUbicacion(input.idUbicacion());
         return dto;
     }
 
@@ -66,6 +69,7 @@ public class EntrevistaMap extends
         dto.setIdEntrevistador(input.idEntrevistador());
         dto.setIdAspirante(input.idAspirante());
         dto.setIdEstado(input.idEstado());
+        dto.setIdUbicacion(input.idUbicacion());
         return dto;
     }
 
@@ -81,24 +85,20 @@ public class EntrevistaMap extends
         EntrevistaDTO.EntrevistaDTOBuilder builder = EntrevistaDTO.builder()
                 .id(input.id());
 
-        if (input.fecha() != null) {
+        if (input.fecha() != null)
             builder.fecha(input.fecha());
-        }
-        if (input.calificacion() != null) {
+        if (input.calificacion() != null)
             builder.calificacion(input.calificacion());
-        }
-        if (input.idTipoentrevista() != null) {
+        if (input.idTipoentrevista() != null)
             builder.idTipoentrevista(input.idTipoentrevista());
-        }
-        if (input.idEntrevistador() != null) {
+        if (input.idEntrevistador() != null)
             builder.idEntrevistador(input.idEntrevistador());
-        }
-        if (input.idAspirante() != null) {
+        if (input.idAspirante() != null)
             builder.idAspirante(input.idAspirante());
-        }
-        if (input.idEstado() != null) {
+        if (input.idEstado() != null)
             builder.idEstado(input.idEstado());
-        }
+        if (input.idUbicacion() != null)
+            builder.idUbicacion(input.idUbicacion());
 
         return builder.build();
     }
@@ -116,61 +116,32 @@ public class EntrevistaMap extends
             return null;
         }
 
-        TipoentrevistaOutput tipoentrevista = null;
-        if (dto.getTipoentrevista() != null) {
-            tipoentrevista = TipoentrevistaOutput.builder()
-                    .id(dto.getTipoentrevista().getId())
-                    .nombre(dto.getTipoentrevista().getNombre())
-                    .descripcion(dto.getTipoentrevista().getDescripcion())
-                    .build();
-        }
-
-        EntrevistadorOutput entrevistador = null;
-        if (dto.getEntrevistador() != null) {
-            entrevistador = entrevistadorProcessor.findById(
-                    new ENTREVISTADOR_FIND(dto.getEntrevistador().getId()));
-        }
-
-        AspiranteOutput aspirante = null;
-        if (dto.getAspirante() != null) {
-            PersonaOutput persona = personaProcessor.findById(
-                    new PERSONA_FIND(dto.getAspirante().getIdPersona()));
-            aspirante = AspiranteOutput.builder()
-                    .id(dto.getAspirante().getId())
-                    .persona(persona) // ✅ poblado
-                    .build();
-        }
-
-        EstadoOutput estado = null;
-        if (dto.getEstado() != null) {
-            estado = EstadoOutput.builder()
-                    .id(dto.getEstado().getId())
-                    .tipo(dto.getEstado().getTipo())
-                    .build();
-        }
+        EntrevistadorOutput entrevistador = entrevistadorMap.toOutput(dto.getEntrevistador());
+        AspiranteOutput aspirante = aspiranteMap.toOutput(dto.getAspirante());
+        UbicacionOutput ubicacion = ubicacionMap.toOutput(dto.getUbicacion());
 
         String nombreAspirante = aspirante != null && aspirante.persona() != null
                 ? aspirante.persona().nombres() + " " + aspirante.persona().apellidos()
                 : "Sin aspirante";
 
-        List<String> nombresEntrevistadores = dto.getEntrevistadoresList() != null
-                ? dto.getEntrevistadoresList().stream().map(
-                        entrevistadorItem -> {
-                            if (entrevistadorItem.getIdAdministrativo() == 0) {
-                                return "Sin nombre";
-                            }
-                            AdministrativoOutput admin = administrativoProcessor.findById(
-                                    new ADMINISTRATIVO_FIND(entrevistadorItem.getIdAdministrativo()));
-                            if (admin == null || admin.persona() == null) {
-                                return "Sin nombre";
-                            }
-                            return admin.persona().nombres() + " " + admin.persona().apellidos();
-                        })
-                        .toList()
+        List<AdministrativoOutput> entrevistadores = dto.getEntrevistadores() != null
+                ? dto.getEntrevistadores().stream()
+                        .map(entre -> administrativoMap.toOutput(entre.getAdministrativo()))
+                        .collect(Collectors.toList())
                 : List.of();
 
-        return new EntrevistaOutput(dto.getId(), dto.getFecha(), dto.getCalificacion(), tipoentrevista, entrevistador,
-                aspirante, estado, nombreAspirante, nombresEntrevistadores);
+        return EntrevistaOutput.builder()
+                .id(dto.getId())
+                .fecha(dto.getFecha())
+                .calificacion(dto.getCalificacion())
+                .tipoentrevista(tipoentrevistaMap.toOutput(dto.getTipoentrevista()))
+                .entrevistador(entrevistador)
+                .aspirante(aspirante)
+                .estado(estadoMap.toOutput(dto.getEstado()))
+                .nombreAspirante(nombreAspirante)
+                .ubicacion(ubicacion)
+                .entrevistadores(entrevistadores)
+                .build();
     }
 
     public List<EntrevistaOutput> toOutputList(List<EntrevistaDTO> dtoList) {
